logCompilacao.txt
MainClass.java:13: error: incompatible types: possible lossy conversion from double to float
        float nk = 619.92 / -10679.85;
                          ^
1 error
